--- a/src/config.ini
+++ b/src/config.ini
@@ -1,5 +1,6 @@
-[Конфигурация нашей базы данных]
+;Конфигурация нашей базы данных
 userName = "root"
 password = "root"
-[Количество записей на одной странице]
+dbname   = "studentlist";
+;Количество записей на одной странице
 recordsPerPage = 16
