--- a/src/config.ini
+++ b/src/config.ini
@@ -1,6 +1,6 @@
 ;Конфигурация нашей базы данных
 userName = "root"
 password = "root"
-dbname   = "studentlist";
+dbname   = "studentlist"
 ;Количество записей на одной странице
 recordsPerPage = 16
